# qfitlib

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md
cmake/: ConfigCompilerFlags.cmake  FortranFlags.cmake
cmake/math/: ConfigMath.cmake  MathLibs.cmake  MathLibsFunctions.cmake  README.rst
python/: connolly.py  obabel.py
src/: auxmat.f90  connolly.F90  geodesic.F90  global_variables.F90  input_readers.F90  integrals.F90  io.F90  linear_solver.F90  pot.f90  precision.F90  printpkg.F  qfit.F90  qfit_input_readers.F90  qfit_io.F90  qfit_utilities.F90  qfit_variables.F90  tensor.f90  utilities.F90
tools/: grid.F90  solver.F90  xyz2grid.F90
tools/fortran/: matrices.F90  solver.F90
